Ticket #1590 (closed defect: fixed)

Opened 7 months ago

Last modified 7 months ago

VLC does not support mpeg2 streams in quicktime flies

Reported by: jj Assigned to: funman
Priority: normal Milestone:
Component: Demuxers Version:
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

vlc comes with its own mov demuxer, right now it does not know about several of the mpeg2 fourccs used by apple.

i put 2 samples up at http://v2v.cc/~j/samples/

 HDV1080i50.mov - HDV3
 HDV1080i60.mov - HDV2

attached patch adds those mpeg2 fourccs (based on gstreamer's qtdemux).

Attachments

vlc_HDV_mpeg2_mov_support.patch (1.6 kB) - added by jj on 21/05/08 16:56:26.
HDV mpeg2 mov support

Change History

21/05/08 16:56:26 changed by jj

  • attachment vlc_HDV_mpeg2_mov_support.patch added.

HDV mpeg2 mov support

21/05/08 17:51:55 changed by funman

  • status changed from new to closed.
  • resolution set to fixed.

[2123e7c23fe7879ed1ddc4efcedcf6da5d16a7f8]

FYI, FFmpeg will decode these streams anyway