Add support for MPEG2 FOURCCs in mp4 demuxer

Fix #1590 - patch by jj